--- a/assets/scss/dadafterforty/_theme.scss
+++ b/assets/scss/dadafterforty/_theme.scss
@@ -1,7 +1,7 @@
 html,
 body {
     color: $color-foreground;
-    padding: 1rem;
+    padding: 5px;
 }
 
 html {
